updates for API and Admin buttons
